@@ -1,5 +1,7 @@
 v0.0.9      2014-03-28
     - Add an explicit symbol import on "use PDL"/etc.
+    - Add get_scan_ids_aref() and lookup_scan_idx_based_on_id() to
+    AI::Pathfinding::OptimizeMultiple::DataInputObj .
 
 v0.0.8      2014-02-02
     - Made sure the =encoding directive is on top of the file in
